--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                                 Se aumentó correctamente la cantidad
                             </div>
                         </div>
-                        <button class="btn btn-success ml-auto comprarButton" type="button" data-toggle="modal"
+                        <button class="btn btn-success ml-auto comprarButton" id="confirmarCompra" type="button" data-toggle="modal"
                             data-target="#comprarModal">Comprar</button>
                     </div>
                 </div>
@@ -165,7 +165,8 @@
             <!-- termina total -->
 
             <!-- inicia mensaje de compra -->
-            <div class="modal fade" id="comprarModal" tabindex="-1" aria-labelledby="comprarModalLabel"
+
+            <!-- <div class="modal fade" id="comprarModal" tabindex="-1" aria-labelledby="comprarModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
@@ -183,7 +184,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- finaliza mensaje de compra-->
 
 
@@ -203,6 +204,7 @@
 
 
     <!-- SCRIPTS -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
